@@ -47,7 +47,6 @@ use Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\PublicProperties;
 use Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\Traversable;
 use Brainworxx\Krexx\Service\Config\Fallback;
 use Brainworxx\Krexx\Service\Reflection\ReflectionClass;
-use Exception;
 use Throwable;
 
 /**
@@ -91,9 +90,7 @@ class Objects extends AbstractCallback
         $output .= $this->dumpStuff(Meta::class);
 
         // Anaylsing error objects.
-        if (is_a($this->parameters[static::PARAM_DATA], Throwable::class) ||
-            is_a($this->parameters[static::PARAM_DATA], Exception::class)
-        ) {
+        if (is_a($this->parameters[static::PARAM_DATA], Throwable::class)) {
             $output .= $this->dumpStuff(ErrorObject::class);
         }
 
