@@ -2,6 +2,7 @@
 - Change: Removed all deprecations.
 - Change: Removed the PHP 5.x fatal error handler.
 - Change: Dropped PHP 5.x support.
+- Change: Remove all double Exception / Throwable catching
 - Bugfix: The process other routing is never called.
 - Bugfix: The cookie editor needs to be "initialized" prior usage.
 
